syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.automatedcheckout";
option java_outer_classname = "AutomatedCheckoutProto";

service AutomatedCheckoutService {
  rpc checkOut(CheckOutRequest) returns (CheckOutResponse);
}

message CheckOutRequest {
  string roomNumber = 1;
}

message CheckOutResponse {
  bool success = 1;
  string message = 2;
}
